@startuml

title __SRP EXAMPLE's Class Diagram__\n

  namespace com.company {
    class com.company.Employee {
    }
  }
  

  namespace com.company {
    class com.company.Finance {
    }
  }
  

  namespace com.company {
    class com.company.HumanResources {
    }
  }
  

  namespace com.company {
    interface com.company.IFinance {
    }
  }
  

  namespace com.company {
    interface com.company.IHumanResources {
    }
  }
  

  namespace com.company {
    interface com.company.IOperations {
    }
  }
  

  namespace com.company {
    interface com.company.ITechnologyServices {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.Operations {
    }
  }
  

  namespace com.company {
    class com.company.Payslip {
    }
  }
  

  namespace com.company {
    class com.company.TechnologyServices {
    }
  }
  

  com.company.Employee o-- com.company.IFinance : CFO
  com.company.Employee o-- com.company.IOperations : COO
  com.company.Employee o-- com.company.IHumanResources : HR
  com.company.Finance .up.|> com.company.IFinance
  com.company.Finance o-- com.company.ITechnologyServices : CTO
  com.company.Finance o-- com.company.Payslip : payslip
  com.company.HumanResources .up.|> com.company.IHumanResources
  com.company.Operations .up.|> com.company.IOperations
  com.company.TechnologyServices .up.|> com.company.ITechnologyServices


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
